Refactorization of the storage component